# STA-6703-Big-Data

./: .gitignore  README.md  Utilities.py  pyproject.toml  utilities.py
Notebooks/: exercise_2.ipynb  exercise_3.ipynb  exercise_4.ipynb  modules_0_and_1.ipynb
