[project]
name = "projects-sta-6703-statistical-learning-with-big-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pandera>=0.29.0",
    "plotly>=6.5.2",
    "scikit-learn>=1.7.2",
    "scipy-stubs~=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
